[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
anyhow = "1"
base64 = "0.13"
chrono = "0.4.15"
config = { version = "0.11", default-features = false, features = ["yaml"] }
log = "0.4"
rand = { version = "0.8", features=["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.115"
serde-aux = "3"
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.19"
tracing-actix-web = "0.5.0"
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.7.1"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14.0"

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3.0"
linkify = "0.8"
once_cell = "1.7.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.61"
wiremock = "0.5"
